Truncate title in the home, fix the twitter button width and fix the omega issue from tablet to desktop

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -409,6 +409,7 @@ a:hover, a:focus {
 /* line 50, ../scss/_base.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-weight: normal;
   letter-spacing: -.025em;
   line-height: 1;
 }
@@ -977,6 +978,11 @@ ul.pagelist .prev .disabledlink:before {
   position: relative;
   overflow: hidden;
   width: 100%;
+}
+
+/* line 56, ../scss/layout/_main.scss */
+.twitter-share-button {
+  width: 100px !important;
 }
 
 @font-face {
@@ -1692,7 +1698,7 @@ ul.pagelist .current {
     margin: 0;
     padding: 10px;
   }
-  /* line 22, ../scss/styles/pages/_home.scss */
+  /* line 184, ../../../../../../.rvm/gems/ruby-1.9.3-p286/gems/susy-1.0.9/sass/susy/_grid.scss */
   .home-latest-albums li:nth-child(2n) {
     float: right;
     margin-right: 0;
@@ -1705,13 +1711,18 @@ ul.pagelist .current {
     float: left;
     margin-right: 0%;
   }
-  /* line 31, ../scss/styles/pages/_home.scss */
+  /* line 251, ../../../../../../.rvm/gems/ruby-1.9.3-p286/gems/susy-1.0.9/sass/susy/_grid.scss */
+  .home-latest-albums li:nth-child(2n) {
+    float: left;
+    margin-right: 0%;
+  }
+  /* line 184, ../../../../../../.rvm/gems/ruby-1.9.3-p286/gems/susy-1.0.9/sass/susy/_grid.scss */
   .home-latest-albums li:nth-child(3n) {
     float: right;
     margin-right: 0;
   }
 }
-/* line 37, ../scss/styles/pages/_home.scss */
+/* line 31, ../scss/styles/pages/_home.scss */
 .home-latest-albums .album-info {
   -webkit-box-shadow: 0 2px 2px 0 #dedede;
   -moz-box-shadow: 0 2px 2px 0 #dedede;
@@ -1725,15 +1736,15 @@ ul.pagelist .current {
   display: table;
   clear: both;
 }
-/* line 42, ../scss/styles/pages/_home.scss */
+/* line 36, ../scss/styles/pages/_home.scss */
 .home-latest-albums .album-title {
   margin: 10px 0 0;
 }
-/* line 46, ../scss/styles/pages/_home.scss */
+/* line 40, ../scss/styles/pages/_home.scss */
 .home-latest-albums .album-thumb {
   display: block;
 }
-/* line 50, ../scss/styles/pages/_home.scss */
+/* line 44, ../scss/styles/pages/_home.scss */
 .home-latest-albums .album-social {
   *zoom: 1;
 }
