--- a/app/scss/_base.scss
+++ b/app/scss/_base.scss
@@ -49,6 +49,7 @@ a {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: $font-head;
+    font-weight: normal;
     letter-spacing: -.025em;
     line-height: 1;
 
