--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -52,3 +52,7 @@
     overflow: hidden;
     width: 100%;
 }
+
+.twitter-share-button {
+    width: 100px !important;
+}
